Mapper - dto - test